--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
       box-shadow: 0 0 10px #d580ff, 0 0 20px #d580ff, 0 0 30px #d580ff;
     }
     .strip span {
-      font-size: 2.5em;
+      font-size: 2.2em;
       color: #d580ff;
       white-space: nowrap;
-      animation: flowText 15s linear infinite;
+      animation: flowText 25s linear infinite;
       text-shadow: 0 0 10px #d580ff, 0 0 20px #d580ff;
       padding-left: 100%;
-      letter-spacing: 4px;
+      letter-spacing: 3px;
     }
     @keyframes flowText {
       0% { transform: translateX(0); }
@@ -63,8 +63,9 @@
 <body>
   <div class="content">
     <div class="strip">
-      <span>TRIPTOWORLD — TRIPTOWORLD — TRIPTOWORLD — </span>
+      <span>triptoworld — understand machine language and human life with us — triptoworld — </span>
     </div>
   </div>
 </body>
 </html>
+
