--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>Link in Bio - 3D Strip</title>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
+
     body, html {
       width: 100%;
       height: 100%;
@@ -21,7 +21,9 @@
       justify-content: center;
       align-items: center;
       overflow: hidden;
+      perspective: 1000px;
     }
+
     .content {
       width: 1000px;
       height: 562px;
@@ -31,41 +33,52 @@
       justify-content: center;
       align-items: center;
     }
+
     .strip {
-      position: absolute;
-      top: 50%;
-      left: 0;
-      transform: translateY(-50%);
       width: 100%;
-      height: 60px;
-      background: rgba(128, 0, 128, 0.5);
+      height: 80px;
+      background: rgba(128, 0, 128, 0.4);
+      box-shadow: 0 0 10px #d580ff, 0 0 20px #d580ff;
+      overflow: hidden;
+      transform-style: preserve-3d;
+      transform: rotateX(10deg);
       display: flex;
       align-items: center;
-      overflow: hidden;
-      z-index: 3;
-      box-shadow: 0 0 10px #d580ff, 0 0 20px #d580ff, 0 0 30px #d580ff;
+      justify-content: center;
     }
-    .strip span {
-      font-size: 2.2em;
+
+    .scrolling-text {
+      display: flex;
+      animation: scroll 20s linear infinite;
+    }
+
+    .scrolling-text span {
       color: #d580ff;
+      font-size: 2.5em;
       white-space: nowrap;
-      animation: flowText 25s linear infinite;
       text-shadow: 0 0 10px #d580ff, 0 0 20px #d580ff;
-      padding-left: 100%;
-      letter-spacing: 3px;
+      margin-right: 100px;
     }
-    @keyframes flowText {
-      0% { transform: translateX(0); }
-      100% { transform: translateX(-100%); }
+
+    @keyframes scroll {
+      0% {
+        transform: translateX(0) rotateY(0deg);
+      }
+      100% {
+        transform: translateX(-50%) rotateY(-30deg);
+      }
     }
   </style>
 </head>
 <body>
   <div class="content">
     <div class="strip">
-      <span>triptoworld — understand machine language and human life with us — triptoworld — </span>
+      <div class="scrolling-text">
+        <span>triptoworld — understand machine language and human life with us —</span>
+        <span>triptoworld — understand machine language and human life with us —</span>
+        <span>triptoworld — understand machine language and human life with us —</span>
+      </div>
     </div>
   </div>
 </body>
 </html>
-
