--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       box-sizing: border-box;
     }
 
-    body, html {
+    html, body {
       width: 100%;
       height: 100%;
       background: black;
@@ -21,52 +21,68 @@
     }
 
     .strip {
-      width: 100%;
-      height: 60px;
       position: fixed;
       top: 0;
+      width: 100%;
+      height: 50px;
       background: rgba(128, 0, 128, 0.4);
       box-shadow: 0 0 10px #d580ff, 0 0 20px #d580ff;
-      overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
       z-index: 10;
+      overflow: hidden;
     }
 
     .scrolling-text {
+      width: 100%;
+      height: 100%;
       display: flex;
-      animation: scroll 20s linear infinite;
+      align-items: center;
+      animation: scroll 15s linear infinite;
     }
 
     .scrolling-text span {
+      display: inline-block;
+      padding-left: 100%;
       color: #d580ff;
-      font-size: 1.8em;
+      font-size: 1.2em;
       white-space: nowrap;
       text-shadow: 0 0 10px #d580ff, 0 0 20px #d580ff;
-      margin-right: 100px;
     }
 
     @keyframes scroll {
       0% {
-        transform: translateX(0);
+        transform: translateX(0%);
       }
       100% {
-        transform: translateX(-50%);
+        transform: translateX(-100%);
       }
     }
 
     #scene-container {
       width: 100%;
       height: 100%;
+      position: relative;
+      top: 50px; /* Push below the strip */
+    }
+
+    @media (min-width: 768px) {
+      .strip {
+        height: 60px;
+      }
+
+      .scrolling-text span {
+        font-size: 1.8em;
+      }
+
+      #scene-container {
+        top: 60px;
+      }
     }
   </style>
 </head>
 <body>
   <div class="strip">
     <div class="scrolling-text">
-      <span>triptoworld — understand machine language and human life with us —</span>
-      <span>triptoworld — understand machine language and human life with us —</span>
+      <span>triptoworld — understand machine language and human life behaviour  us —</span>
     </div>
   </div>
 
@@ -77,15 +93,23 @@
     const scene = new THREE.Scene();
     scene.background = new THREE.Color("#000000");
 
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+    const camera = new THREE.PerspectiveCamera(
+      75,
+      window.innerWidth / window.innerHeight,
+      0.1,
+      1000
+    );
     camera.position.z = 2;
 
-    const renderer = new THREE.WebGLRenderer();
+    const renderer = new THREE.WebGLRenderer({ antialias: true });
+    renderer.setPixelRatio(window.devicePixelRatio);
     renderer.setSize(window.innerWidth, window.innerHeight);
-    document.getElementById('scene-container').appendChild(renderer.domElement);
+    document.getElementById("scene-container").appendChild(renderer.domElement);
 
     const geometry = new THREE.SphereGeometry(0.8, 32, 32);
-    const texture = new THREE.TextureLoader().load('https://raw.githubusercontent.com/ajayns/three-earth-example/master/assets/earthmap1k.jpg');
+    const texture = new THREE.TextureLoader().load(
+      "https://raw.githubusercontent.com/ajayns/three-earth-example/master/assets/earthmap1k.jpg"
+    );
     const material = new THREE.MeshBasicMaterial({ map: texture });
     const earth = new THREE.Mesh(geometry, material);
     scene.add(earth);
@@ -97,12 +121,21 @@
     }
     animate();
 
-    window.addEventListener('wheel', function(e) {
-      if (e.deltaY < 0) {
-        camera.position.z -= 0.5;
-      } else {
-        camera.position.z += 0.5;
-      }
+    // Zoom control with limits
+    window.addEventListener("wheel", function (e) {
+      const zoomSpeed = 0.3;
+      const minZoom = 1;
+      const maxZoom = 5;
+
+      camera.position.z += e.deltaY > 0 ? zoomSpeed : -zoomSpeed;
+      camera.position.z = Math.max(minZoom, Math.min(maxZoom, camera.position.z));
+    });
+
+    // Handle screen resize
+    window.addEventListener("resize", () => {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
     });
   </script>
 </body>
