--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       box-shadow: 0 0 10px #d580ff, 0 0 20px #d580ff;
       z-index: 10;
       overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .scrolling-text {
@@ -61,7 +64,7 @@
       width: 100%;
       height: 100%;
       position: relative;
-      top: 50px; /* Push below the strip */
+      top: 50px;
     }
 
     @media (min-width: 768px) {
@@ -77,19 +80,89 @@
         top: 60px;
       }
     }
+
+    /* Hamburger Styles */
+    .hamburger {
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      width: 30px;
+      height: 22px;
+      z-index: 20;
+      cursor: pointer;
+    }
+
+    .hamburger div {
+      height: 4px;
+      margin: 4px 0;
+      background: #fff;
+      border-radius: 2px;
+      transition: all 0.3s;
+    }
+
+    .menu {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.8);
+      backdrop-filter: blur(10px);
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 19;
+    }
+
+    .menu a {
+      color: #d580ff;
+      font-size: 2em;
+      margin: 20px 0;
+      text-decoration: none;
+      text-shadow: 0 0 10px #d580ff;
+      transition: transform 0.2s ease;
+    }
+
+    .menu a:hover {
+      transform: scale(1.1);
+    }
+
+    .menu.show {
+      display: flex;
+    }
   </style>
 </head>
 <body>
   <div class="strip">
     <div class="scrolling-text">
-      <span>triptoworld — understand machine language and human life behaviour  us —</span>
+      <span>triptoworld — understand machine language and human behaviours with us —</span>
     </div>
+  </div>
+
+  <!-- Hamburger -->
+  <div class="hamburger" onclick="toggleMenu()">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+
+  <!-- Full-screen Menu -->
+  <div class="menu" id="menu">
+    <a href="https://youtube.com" target="_blank">YouTube</a>
+    <a href="https://gumroad.com" target="_blank">Gumroad</a>
+    <a href="https://yourportfolio.com" target="_blank">Portfolio</a>
+    <a href="https://yourwebsite.com" target="_blank">Website</a>
   </div>
 
   <div id="scene-container"></div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script>
+    function toggleMenu() {
+      document.getElementById("menu").classList.toggle("show");
+    }
+
     const scene = new THREE.Scene();
     scene.background = new THREE.Color("#000000");
 
@@ -121,7 +194,6 @@
     }
     animate();
 
-    // Zoom control with limits
     window.addEventListener("wheel", function (e) {
       const zoomSpeed = 0.3;
       const minZoom = 1;
@@ -131,7 +203,6 @@
       camera.position.z = Math.max(minZoom, Math.min(maxZoom, camera.position.z));
     });
 
-    // Handle screen resize
     window.addEventListener("resize", () => {
       camera.aspect = window.innerWidth / window.innerHeight;
       camera.updateProjectionMatrix();
