--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TriptoWorld 3D Earth Room</title>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
   <style>
@@ -102,6 +102,33 @@
       transform: scale(1.1);
     }
 
+    .dropdown {
+      position: relative;
+      display: inline-block;
+      text-align: center;
+    }
+
+    .dropdown-content {
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      background-color: rgba(0, 0, 0, 0.9);
+      padding: 10px;
+      border-radius: 10px;
+      z-index: 21;
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: flex;
+    }
+
+    .dropdown-content a {
+      font-size: 1.2em;
+      margin: 5px 0;
+    }
+
     #scene-container {
       width: 100%;
       height: 100vh;
@@ -133,100 +160,65 @@
       margin: 0 auto;
     }
 
-    .falling span {
-      display: inline-block;
-      animation: fall 1s forwards ease-in;
-    }
-
-    @keyframes fall {
-      0% {
-        transform: translateY(0) rotate(0deg);
-        opacity: 1;
-      }
-      100% {
-        transform: translateY(300px) rotate(720deg);
-        opacity: 0;
-      }
-    }
-
     @media (min-width: 768px) {
-      .strip {
-        height: 60px;
-      }
-
-      .scrolling-text span {
-        font-size: 1.8em;
-      }
-
-      #scene-container {
-        top: 60px;
-      }
+      .strip { height: 60px; }
+      .scrolling-text span { font-size: 1.8em; }
+      #scene-container { top: 60px; }
     }
   </style>
 </head>
 <body>
-  <div class="strip" id="strip">
-    <div class="scrolling-text" id="scrolling-text">
-      <span id="stripText">triptoworld — understand machine language and human behaviours with us —</span>
+  <div class="strip">
+    <div class="scrolling-text">
+      <span>triptoworld — understand machine language and human behaviours with us —</span>
     </div>
   </div>
 
-  <!-- Hamburger -->
+  <!-- Hamburger Menu -->
   <div class="hamburger" onclick="toggleMenu()">
-    <div></div><div></div><div></div>
+    <div></div>
+    <div></div>
+    <div></div>
   </div>
 
-  <!-- Menu -->
+  <!-- Fullscreen Menu with Dropdowns -->
   <div class="menu" id="menu">
-    <a href="https://www.youtube.com/channel/UCPlaPhIc656wuCWJf2Ws9VQ" target="_blank">YouTube</a>
-    <a href="https://gumroad.com" target="_blank">Gumroad</a>
+    <div class="dropdown">
+      <a href="#">YouTube ▾</a>
+      <div class="dropdown-content">
+        <a href="https://www.youtube.com/channel/UCPlaPhIc656wuCWJf2Ws9VQ" target="_blank">Main Channel</a>
+        <a href="https://www.youtube.com/@triptoworld" target="_blank">TriptoWorld Channel</a>
+      </div>
+    </div>
+
+    <div class="dropdown">
+      <a href="#">Gumroad ▾</a>
+      <div class="dropdown-content">
+        <a href="https://gumroad.com" target="_blank">Main Gumroad</a>
+        <a href="https://jagtappritam7.gumroad.com" target="_blank">My Channel</a>
+      </div>
+    </div>
+
     <a href="https://yourportfolio.com" target="_blank">Portfolio</a>
     <a href="https://yourwebsite.com" target="_blank">Website</a>
   </div>
 
+  <!-- Earth Container -->
   <div id="scene-container"></div>
 
+  <!-- Content Section -->
   <div class="white-section">
     <h1>Welcome to TriptoWorld</h1>
     <p>We dive deep into how machines learn and how humans behave. Explore knowledge, tools, and projects curated just for you.</p>
   </div>
 
-  <audio id="crashSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_4f772c8b3d.mp3"></audio>
-
+  <!-- Three.js & JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script>
     function toggleMenu() {
-      const menu = document.getElementById("menu");
-      const strip = document.getElementById("strip");
-      const text = document.getElementById("stripText");
-      const audio = document.getElementById("crashSound");
-
-      menu.classList.toggle("show");
-
-      if (menu.classList.contains("show")) {
-        // Break text into spans
-        const characters = text.textContent.split("").map(char => {
-          const span = document.createElement("span");
-          span.textContent = char;
-          return span;
-        });
-        text.innerHTML = "";
-        characters.forEach(span => {
-          text.appendChild(span);
-        });
-
-        text.classList.add("falling");
-        audio.play();
-
-        // Reset after animation
-        setTimeout(() => {
-          text.classList.remove("falling");
-          text.innerHTML = "triptoworld — understand machine language and human behaviours with us —";
-        }, 1500);
-      }
+      document.getElementById("menu").classList.toggle("show");
     }
 
-    // 3D Earth
     const scene = new THREE.Scene();
     scene.background = new THREE.Color("#000000");
 
@@ -255,6 +247,7 @@
       const zoomSpeed = 0.3;
       const minZoom = 1;
       const maxZoom = 5;
+
       camera.position.z += e.deltaY > 0 ? zoomSpeed : -zoomSpeed;
       camera.position.z = Math.max(minZoom, Math.min(maxZoom, camera.position.z));
     });
